--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
-    "ng-jhipster": "0.1.18",
+    "ng-jhipster": "0.2.2",
+    "ng2-translate": "4.2.0",
     "ng2-webstorage": "1.8.0",
     "ngrx-store-freeze": "^0.1.6",
     "ngrx-store-localstorage": "0.1.8",
