--- a/package.json
+++ b/package.json
@@ -200,7 +200,7 @@
     "test": "karma start karma.conf.js",
     "test:full": "ng lint && npm run sassLint && ng test --watch=false --code-coverage",
     "test:watch": "karma start src/test/javascript/karma.conf.js --watch",
-    "e2e": "protractor src/test/javascript/protractor.conf.js",
+    "e2e": "protractor protractor.conf.js",
     "postinstall": "webdriver-manager update && node node_modules/phantomjs-prebuilt/install.js && yarn run webpack:build",
     "webdriver": "yarn run webpack:build",
     "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx": "",
