--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   ],
   "dependencies": {
     "@angular/animations": "4.1.3",
-    "@angular/common": "4.3.0",
-    "@angular/compiler": "4.3.0",
-    "@angular/core": "4.3.0",
+    "@angular/common": "4.3.1",
+    "@angular/compiler": "4.3.1",
+    "@angular/core": "4.3.1",
     "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/forms": "4.3.0",
-    "@angular/http": "4.3.0",
+    "@angular/forms": "4.3.1",
+    "@angular/http": "4.3.1",
     "@angular/material": "2.0.0-beta.7",
     "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.3.0",
-    "@angular/router": "4.3.0",
+    "@angular/platform-browser-dynamic": "4.3.1",
+    "@angular/router": "4.3.1",
     "@angularclass/form-validators": "^1.0.12",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.28",
     "@ngrx/core": "^1.2.0",
@@ -25,7 +25,7 @@
     "@ngrx/effects": "2.0.3",
     "@ngrx/router-store": "1.2.6",
     "@ngrx/store": "2.2.3",
-    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/core": "7.1.0",
     "@ngx-translate/http-loader": "0.0.3",
     "@swimlane/ngx-datatable": "9.3.1",
     "amcharts3": "github:amcharts/amcharts3",
@@ -75,15 +75,15 @@
     "sockjs-client": "1.1.4",
     "sortablejs": "1.6.0",
     "string_decoder": "~1.0.1",
-    "swagger-ui": "3.0.19",
+    "swagger-ui": "3.0.20",
     "tabtab": "2.2.2",
     "tether": "1.4.0",
     "ts-helpers": "1.1.2",
     "webstomp-client": "1.0.6",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0-beta.1",
+    "@angular/cli": "1.3.0-rc.0",
     "@angular/compiler-cli": "4.3.0",
     "@angularclass/hmr": "2.1.2",
     "@ngrx/store-devtools": "3.2.4",
@@ -91,17 +91,17 @@
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "2.0.41",
-    "@types/leaflet": "1.0.64",
+    "@types/leaflet": "1.0.67",
     "@types/localforage": "0.0.33",
     "@types/node": "8.0.8",
     "@types/selenium-webdriver": "3.0.4",
     "@types/simple-peer": "6.1.2",
-    "@types/uuid": "3.0.0",
+    "@types/uuid": "3.4.0",
     "@types/webpack-env": "1.13.0",
     "add-asset-html-webpack-plugin": "2.0.1",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.2.1",
-    "browser-sync": "2.18.12",
+    "browser-sync": "2.18.13",
     "browser-sync-webpack-plugin": "1.2.0",
     "codelyzer": "3.1.2",
     "copy-webpack-plugin": "4.0.1",
@@ -111,7 +111,7 @@
     "exports-loader": "0.6.4",
     "extract-text-webpack-plugin": "2.1.1",
     "file-loader": "0.11.2",
-    "generator-jhipster": "4.6.1",
+    "generator-jhipster": "4.6.2",
     "generator-jhipster-bootstrap-material-design": "3.5.1",
     "generator-jhipster-bootswatch": "1.0.2",
     "generator-jhipster-darktheme": "0.0.7",
@@ -161,7 +161,7 @@
     "sw-precache": "4.2.3",
     "tabtab": "2.2.2",
     "to-string-loader": "1.1.5",
-    "ts-node": "3.2.0",
+    "ts-node": "3.2.1",
     "tslint": "5.5.0",
     "tslint-loader": "3.5.3",
     "typedoc": "0.5.1",
@@ -170,7 +170,7 @@
     "web-app-manifest-loader": "0.1.1",
     "webdriver-manager": "11.0.0",
     "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1",
+    "webpack-dev-server": "2.6.0",
     "webpack-merge": "4.1.0",
     "webpack-notifier": "1.5.0",
     "webpack-visualizer-plugin": "0.1.11",
