--- a/package.json
+++ b/package.json
@@ -141,8 +141,8 @@
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.4",
-    "lcov-parse": "0.0.10",
     "lazypipe": "1.0.1",
+    "lcov-parse": "0.0.10",
     "lodash": "4.17.4",
     "map-stream": "0.0.7",
     "merge-jsons-webpack-plugin": "1.0.8",
@@ -158,6 +158,7 @@
     "run-sequence": "2.0.0",
     "sass-lint": "1.10.2",
     "sass-loader": "^6.0.0",
+    "source-map-explorer": "1.4.0",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "string-replace-webpack-plugin": "0.1.3",
     "style-loader": "0.18.2",
