--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "lodash": "4.17.4",
     "map-stream": "0.0.7",
     "merge-jsons-webpack-plugin": "1.0.8",
+    "ng-router-loader": "2.1.0",
     "ngc-webpack": "3.0.0",
     "node-sass": "4.5.3",
     "phantomjs-prebuilt": "2.1.14",
