--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "4.3.1",
     "@angular/router": "4.3.1",
     "@angularclass/form-validators": "^1.0.12",
+    "@angularclass/hmr-loader": "3.0.4",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.28",
     "@ngrx/db": "2.0.2",
     "@ngrx/effects": "4.0.1",
@@ -86,6 +87,7 @@
     "@angular/cli": "1.3.0-rc.0",
     "@angular/compiler-cli": "4.3.1",
     "@angularclass/hmr": "2.1.2",
+    "@angularclass/hmr-loader": "3.0.4",
     "@ngrx/store-devtools": "4.0.0",
     "@ngtools/webpack": "1.5.5",
     "@types/fullcalendar": "2.7.44",
@@ -102,6 +104,7 @@
     "@types/webpack-env": "1.13.0",
     "add-asset-html-webpack-plugin": "2.0.1",
     "angular2-template-loader": "0.6.2",
+    "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "3.2.1",
     "browser-sync": "2.18.13",
     "browser-sync-webpack-plugin": "1.2.0",
@@ -126,6 +129,7 @@
     "gh-pages-deploy": "0.4.2",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
+    "inline-manifest-webpack-plugin": "3.0.1",
     "jasmine-core": "2.6.4",
     "jasmine-marbles": "0.1.0",
     "jasmine-reporters": "2.2.1",
@@ -148,8 +152,9 @@
     "map-stream": "0.0.7",
     "merge-jsons-webpack-plugin": "1.0.8",
     "ng-router-loader": "2.1.0",
-    "ngc-webpack": "3.0.0",
+    "ngc-webpack": "^3.2.0",
     "node-sass": "4.5.3",
+    "optimize-js-plugin": "0.0.4",
     "phantomjs-prebuilt": "2.1.14",
     "postcss-loader": "2.0.6",
     "protractor": "5.1.2",
@@ -160,6 +165,7 @@
     "run-sequence": "2.0.0",
     "sass-lint": "1.10.2",
     "sass-loader": "^6.0.0",
+    "script-ext-html-webpack-plugin": "1.8.5",
     "source-map-explorer": "1.4.0",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "string-replace-webpack-plugin": "0.1.3",
@@ -188,32 +194,61 @@
     "node": "6.11.1"
   },
   "scripts": {
-    "lint": "tslint 'src/main/webapp/app/**/*.ts' 'src/test/javascript/**/*.ts'",
-    "lint:fix": "tslint 'src/main/webapp/app/**/*.ts' 'src/test/javascript/**/*.ts' --fix",
-    "ngc": "ngc -p tsconfig-aot.json",
-    "cleanup": "rimraf target/{aot,www}",
-    "start": "yarn run webpack:dev",
-    "webpack:dev": "yarn run webpack-dev-server -- --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9070",
-    "webpack:build:main": "yarn run webpack -- --config webpack/webpack.dev.js --progress --profile",
-    "webpack:build": "yarn run cleanup && yarn run webpack:build:main",
-    "webpack:prod:main": "yarn run webpack -- --config webpack/webpack.prod.js --progress --profile",
-    "webpack:prod": "yarn run cleanup && yarn run webpack:prod:main",
-    "webpack:test": "yarn run test",
-    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
-    "test": "karma start karma.conf.js",
-    "test:full": "ng lint && npm run sassLint && ng test --watch=false --code-coverage",
-    "test:watch": "karma start karma.conf.js --watch",
-    "e2e": "protractor protractor.conf.js",
-    "postinstall": "webdriver-manager update && node node_modules/phantomjs-prebuilt/install.js",
-    "webdriver": "yarn run webpack:build",
-    "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx": "",
-    "rimraf": "rimraf",
-    "clean:dist": "npm run rimraf -- target .awcache",
+    "build:aot:prod": "npm run clean:dist && npm run clean:aot && cross-env BUILD_AOT=1 npm run webpack -- --config webpack/webpack.prod.js  --progress --profile --bail",
     "build:aot": "npm run build:aot:prod",
-    "build:aot:prod": "npm run clean:dist && npm run sass && webpack",
-    "build:aot:prod:e2e": "npm run clean:dist && npm run sass && webpack",
-    "build:aot:dev": "npm run clean:dist && npm run sass && webpack",
-    "sass": "node-sass \"src/main/webapp/content/scss/global.scss\"  \"target/www/content/global.css\" --include-path node_modules --output-style compressed -q"
+    "build:dev": "npm run clean:dist && npm run webpack -- --config webpack/webpack.dev.js --progress --profile",
+    "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
+    "build:prod": "npm run clean:dist && npm run webpack -- --config webpack/webpack.prod.js  --progress --profile --bail",
+    "build": "npm run build:dev",
+    "ci:aot": "npm run lint && npm run test && npm run build:aot && npm run e2e",
+    "ci:jit": "npm run lint && npm run test && npm run build:prod && npm run e2e",
+    "ci:nobuild": "npm run lint && npm test && npm run e2e",
+    "ci:testall": "npm run lint && npm run test && npm run build:prod && npm run e2e && npm run build:aot && npm run e2e",
+    "ci:travis": "npm run lint && npm run test && npm run build:aot && npm run e2e:travis",
+    "ci": "npm run ci:testall",
+    "clean:dll": "npm run rimraf -- dll",
+    "clean:aot": "npm run rimraf -- compiled",
+    "clean:dist": "npm run rimraf -- target/aot",
+    "clean:install": "npm set progress=false && npm install",
+    "clean": "npm cache clean --force && npm run rimraf -- node_modules doc coverage target/aot compiled dll",
+    "docker": "docker",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "e2e:live": "npm-run-all -p -r server:prod:ci protractor:live",
+    "e2e:travis": "npm-run-all -p -r server:prod:ci protractor:delay",
+    "e2e": "npm-run-all -p -r server:prod:ci protractor",
+    "github-deploy:dev": "npm run webpack -- --config webpack/webpack.github-deploy.js --progress --profile --env.githubDev",
+    "github-deploy:prod": "npm run webpack -- --config webpack/webpack.github-deploy.js --progress --profile --env.githubProd",
+    "github-deploy": "npm run github-deploy:dev",
+    "lint": "npm run tslint \"src/main/webapp/**/*.ts\"",
+    "node": "node",
+    "postinstall": "npm run webdriver:update",
+    "postversion": "git push && git push --tags",
+    "preclean:install": "npm run clean",
+    "preversion": "npm test",
+    "protractor": "protractor",
+    "protractor:delay": "sleep 3 && npm run protractor",
+    "protractor:live": "protractor --elementExplorer",
+    "rimraf": "rimraf",
+    "server:dev:hmr": "npm run server:dev -- --inline --hot",
+    "server:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --open --progress --profile --watch --content-base src/",
+    "server:prod": "http-server target/www -c-1 --cors",
+    "server:prod:ci": "http-server target/www -p 3000 -c-1 --cors",
+    "server": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start": "npm run server:dev",
+    "test": "npm run lint && karma start",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "version": "npm run build",
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:prod": "npm run build:prod -- --watch",
+    "watch:test": "npm run test -- --auto-watch --no-single-run",
+    "watch": "npm run watch:dev",
+    "webdriver-manager": "webdriver-manager",
+    "webdriver:start": "npm run webdriver-manager start",
+    "webdriver:update": "webdriver-manager update",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
   }
 }
