--- a/package.json
+++ b/package.json
@@ -184,7 +184,7 @@
     "event-stream": "3.3.4",
     "exports-loader": "0.6.4",
     "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "3.0.0",
+    "extract-text-webpack-plugin": "~2.1.0",
     "file-loader": "0.11.2",
     "find-root": "^1.0.0",
     "generator-jhipster-bootstrap-material-design": "3.5.1",
@@ -271,7 +271,7 @@
     "webpack-merge": "~4.1.0",
     "webpack-notifier": "1.5.0",
     "webpack-visualizer-plugin": "0.1.11",
-    "webpack": "~2.6.1",
+    "webpack": "3.4.1",
     "write-file-webpack-plugin": "4.1.0",
     "xml2js": "0.4.17",
     "yargs": "8.0.2"
