--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -25,6 +25,29 @@
       "node_modules/@types"
     ]
   },
+  "files": [
+    "src/main/webapp/app/app.module.ts",
+    "src/main/webapp/app/features/features.module.ts",
+    "src/main/webapp/app/features/about/about.module.ts",
+    "src/main/webapp/app/features/legal/legal.module.ts",
+    "src/main/webapp/app/features/bernie/bernie.module.ts",
+    "src/main/webapp/app/features/books/books.module.ts",
+    "src/main/webapp/app/features/chat/chat.module.ts",
+    "src/main/webapp/app/features/contact/contact.module.ts",
+    "src/main/webapp/app/features/counter/counter.module.ts",
+    "src/main/webapp/app/features/game/game.module.ts",
+    "src/main/webapp/app/features/heroes/heroes.module.ts",
+    "src/main/webapp/app/features/messages/messages.module.ts",
+    "src/main/webapp/app/features/notes/notes.module.ts",
+    "src/main/webapp/app/features/talks/talks.module.ts",
+    "src/main/webapp/app/features/wiki/wiki.module.ts",
+    "src/main/webapp/app/features/meals/home/home.module.ts",
+    "src/main/webapp/app/features/meals/recipe/recipe.module.ts",
+    "src/main/webapp/custom-typings.d.ts"
+  ],
+  "include": [
+    "src/main/webapp/app/**.*.ts"
+  ],
   "exclude": [
     "node_modules",
     "dist",
