--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,26 @@
 {
     "compilerOptions": {
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
+        "target": "es5",
         "lib": [
             "es2017",
             "dom"
         ],
         "module": "commonjs",
         "moduleResolution": "node",
-        "noImplicitAny": false,
-        "outDir": "target/www/app",
-        "removeComments": false,
         "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "removeComments": false,
+        "noImplicitAny": false,
         "suppressImplicitAnyIndexErrors": true,
-        "target": "es5",
+        "outDir": "target/www/app",
         "typeRoots": [
             "node_modules/@types"
         ]
     },
     "include": [
         "src/main/webapp/app",
-        "src/test/javascript/",
+        "src/test/javascript",
         "typings.d.ts"
-    ],
-    "exclude": [
-        "src/main/webapp/app/app.main-aot.ts"
     ]
 }
