--- a/package.json
+++ b/package.json
@@ -193,11 +193,11 @@
     "ngc": "ngc -p tsconfig-aot.json",
     "cleanup": "rimraf target/{aot,www}",
     "start": "yarn run webpack:dev",
-    "webpack:dev": "yarn run webpack-dev-server -- --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9070",
-    "webpack:build:main": "yarn run webpack -- --config webpack/webpack.dev.js --progress --profile",
-    "webpack:build": "yarn run cleanup && yarn run webpack:build:main",
-    "webpack:prod:main": "yarn run webpack -- --config webpack/webpack.prod.js --progress --profile",
-    "webpack:prod": "yarn run cleanup && yarn run webpack:prod:main",
+    "webpack:dev": "webpack-dev-server --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9070",
+    "webpack:build:vendor": "webpack --config webpack/webpack.vendor.js --progress --profile",
+    "webpack:build:dev": "webpack --config webpack/webpack.dev.js --progress --profile",
+    "webpack:build": "yarn run cleanup && yarn run webpack:build:vendor && yarn run webpack:build:dev",
+    "webpack:prod": "yarn run cleanup && webpack -p --config webpack/webpack.vendor.js --progress --profile && webpack -p --config webpack/webpack.prod.js --progress --profile",
     "webpack:test": "yarn run test",
     "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
@@ -206,14 +206,6 @@
     "test:watch": "karma start karma.conf.js --watch",
     "e2e": "protractor protractor.conf.js",
     "postinstall": "webdriver-manager update && node node_modules/phantomjs-prebuilt/install.js",
-    "webdriver": "yarn run webpack:build",
-    "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx": "",
-    "rimraf": "rimraf",
-    "clean:dist": "npm run rimraf -- target .awcache",
-    "build:aot": "npm run build:aot:prod",
-    "build:aot:prod": "npm run clean:dist && npm run sass && webpack",
-    "build:aot:prod:e2e": "npm run clean:dist && npm run sass && webpack",
-    "build:aot:dev": "npm run clean:dist && npm run sass && webpack",
-    "sass": "node-sass \"src/main/webapp/content/scss/global.scss\"  \"target/www/content/global.css\" --include-path node_modules --output-style compressed -q"
+    "webdriver": "yarn run webpack:build"
   }
 }
